WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311481
Fix missing m_hasStickyAncestor check in RenderLayer::ancestorLayerPositionStateChanged
https://bugs.webkit.org/show_bug.cgi?id=311481
Summary
Fix missing m_hasStickyAncestor check in RenderLayer::ancestorLayerPositionSt...
Chris Dumez
Reported
2026-04-04 07:21:28 PDT
Fix missing m_hasStickyAncestor check in RenderLayer::ancestorLayerPositionStateChanged.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-04 08:01:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62038
EWS
Comment 2
2026-04-04 18:58:19 PDT
Committed
310586@main
(3fbfed522d7d): <
https://commits.webkit.org/310586@main
> Reviewed commits have been landed. Closing PR #62038 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-04 18:59:12 PDT
<
rdar://problem/174095552
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug